<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".DetailActivity">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:titleEnabled="false">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/poster_ct"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax"
                    tools:src="@drawable/img_placeholder" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/toolbar_view"
                    app:layout_collapseMode="parallax" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="@android:color/transparent"
                    app:layout_collapseMode="pin"
                    app:theme="@style/ThemeOverlay.AppCompat.Dark">

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingBottom="@dimen/smallPadding"
                        android:paddingTop="@dimen/topBarPadding"
                        android:textColor="@color/primaryLightText"
                        android:textSize="@dimen/headSize" />
                </android.support.v7.widget.Toolbar>

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nested_sv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="blocksDescendants"
                android:padding="@dimen/mediumPadding">

                <LinearLayout
                    android:id="@+id/main_details"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:orientation="horizontal"
                        android:padding="@dimen/smallPadding">

                        <TextView
                            android:id="@+id/tv_rating"
                            style="@style/TextAppearance.AppCompat.Display1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            tools:text="@string/rating_placeholder" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/rating_label"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/overlineSize" />
                    </LinearLayout>

                    <TextView
                        style="@style/heading_style"
                        android:text="@string/description_label" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/label_style"
                            android:text="@string/date_label" />

                        <TextView
                            android:id="@+id/tv_date"
                            style="@style/body_style"
                            android:layout_marginEnd="@dimen/smallSeparation"
                            android:layout_marginRight="@dimen/smallSeparation"
                            tools:text="@string/year_placeholder" />

                        <TextView
                            style="@style/label_style"
                            android:text="@string/country_label" />

                        <TextView
                            android:id="@+id/tv_country"
                            style="@style/body_style"
                            tools:text="@string/country_placeholder" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/genre_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/smallPadding"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/label_style"
                            android:text="@string/genre_label" />

                        <TextView
                            android:id="@+id/tv_genre"
                            style="@style/body_style"
                            tools:text="@string/genre_placeholder" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/direction_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/smallPadding"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/label_style"
                            android:text="@string/directed_label" />

                        <TextView
                            android:id="@+id/tv_director"
                            style="@style/body_style"
                            tools:text="@string/director_placeholder" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_synopsis"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/smallPadding"
                        android:lineSpacingMultiplier="1.2"
                        android:textSize="@dimen/bodySize"
                        tools:text="@string/synopsis_label" />

                    <TextView
                        android:id="@+id/photos_label"
                        style="@style/heading_style"
                        android:text="@string/photos_label" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_photos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/cast_label"
                        style="@style/heading_style"
                        android:text="@string/cast_label" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_cast"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/trailers_label"
                        style="@style/heading_style"
                        android:text="@string/trailers_label" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_trailers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/reviews_label"
                        style="@style/heading_style"
                        android:text="@string/reviews_label" />

                    <LinearLayout
                        android:id="@+id/reviews_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <include
                            android:id="@+id/review1"
                            layout="@layout/reviews_layout"
                            android:visibility="gone" />

                        <include
                            android:id="@+id/review2"
                            layout="@layout/reviews_layout"
                            android:visibility="gone" />

                        <include
                            android:id="@+id/review3"
                            layout="@layout/reviews_layout"
                            android:visibility="gone" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/recommendations_label"
                        style="@style/heading_style"
                        android:text="@string/recommendations_label" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_recommendations"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <!-- Loading indicator is only shown before the first load -->
                <ProgressBar
                    android:id="@+id/loading_spinner"
                    style="@style/Widget.AppCompat.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />
            </FrameLayout>
        </android.support.v4.widget.NestedScrollView>
    </android.support.design.widget.CoordinatorLayout>
</layout>