<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/smallSeparation"
    android:layout_weight="1"
    app:cardBackgroundColor="@color/colorPrimary"
    app:cardCornerRadius="@dimen/smallPadding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/smallPadding">

        <TextView
            android:id="@+id/author_tv"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textColor="@color/primaryLightText"
            android:textSize="@dimen/bodySize"
            tools:text="@string/author_placeholder" />

        <TextView
            android:id="@+id/review_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/smallSeparation"
            android:ellipsize="end"
            android:maxLines="5"
            android:padding="@dimen/smallSeparation"
            android:textColor="@color/secondaryLightText"
            android:textStyle="italic"
            tools:text="@string/review_placeholder" />

        <TextView
            android:id="@+id/view_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/smallSeparation"
            android:layout_marginRight="@dimen/smallSeparation"
            android:layout_marginTop="@dimen/smallSeparation"
            android:text="@string/view_more"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>
</android.support.v7.widget.CardView>